--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "await-to-js": "^2.1.1",
         "capital-case": "^1.0.4",
         "change-case": "^4.1.2",
+        "file-saver": "^2.0.5",
         "filesize": "^6.3.0",
         "moment": "^2.29.1",
         "no-case": "^3.0.4",
