--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "no-case": "^3.0.4",
         "nuxt": "^2.14.7",
         "resumablejs": "^1.1.0",
+        "vuejs-paginate": "^2.1.0",
         "vuelidate": "^0.7.6"
     },
     "devDependencies": {
